# x-cleaner

./: .coveragerc  .env.example  .gitignore  .mypy.ini  .pylintrc  API_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING.md  CODE_CONVENTIONS.md  IMPLEMENTATION_ROADMAP.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  start_api.sh  test_api.py
.claude/: README.md  claude.json
.claude/commands/: architecture-review.md  code-review.md  dev-start.md  quality-check.md  scan-trigger.md  setup-tools.md  test-run.md
.claude/prompts/: implement-feature.md
.github/workflows/: linting.yml
.streamlit/: config.toml
backend/: config.py  database.py  dependencies.py  main.py  models.py
backend/api/: grok_client.py  x_client.py
backend/api/routes/: accounts.py  scan.py  statistics.py
backend/api/schemas/: account.py  scan.py  statistics.py
backend/core/: progress_tracker.py
backend/core/services/: __init__.py  account_service.py  categorizer.py  scan_service.py  statistics_service.py
backend/db/repositories/: __init__.py  account_repository.py  category_repository.py
docs/: PHASE5_DEPLOYMENT.md
scripts/: populate_sample_data.py
streamlit_app/: README.md  api_client.py  app.py  utils.py
streamlit_app/components/: __init__.py  charts.py  filters.py  scan_progress.py
streamlit_app/pages/: 1_📁_Categories.py  2_👥_Accounts.py  3_📊_Analytics.py  4_Settings.py  4_⚙️_Settings.py
tests/: test_categorizer_service.py  test_database.py  test_grok_client.py  test_repositories.py  test_scan_service.py  test_services.py  test_x_client.py
tests/integration/: __init__.py  test_scan_api.py  test_scan_workflow.py
